Changelog v5.2.19 (2025-05-17):
- Removed Difflib and Fuzzy Matching

Changelog v5.2.18 (2025-05-13):
- Added Trailers to Anilist Watchlist

Changelog v5.2.17 (2025-05-12):
- Small Bug fix in Watchlist Manager
- Playing Next Dialog button will seek to the end instead

Changelog v5.2.16 (2025-05-11):
- Fixed Playback bugs with Local Files

Changelog v5.2.15 (2025-05-11):
- Improved Last Played Matching
- Playing Next Episode will be alot faster
- Fixed Aniwave Playback

Changelog v5.2.14 (2025-05-09):
- Fix Weird Black Screen Bug when playing next episode

Changelog v5.2.13 (2025-05-02):
- Fix Bugs with teamup
- Fix Episode Meta Notifications
- Change Calendar to Update 24hrs

Changelog v5.2.12 (2025-04-30):
- Fix Bug with Subtitle Language

Changelog v5.2.11 (2025-04-27):
- Fix Small bug with H!anime

Changelog v5.2.10 (2025-04-27):
- Small Fix with Setup Wizard for Source Type

Changelog v5.2.9 (2025-04-26):
- Refactored default.py to <25 lines
- Moved logic into Main.py
- Fix Language Invoker Bugs
- Improved Airing Anime Calendar

Changelog v5.2.8 (2025-04-23):
- Fixed Skipping Bug with certain Embeds
- Moved Icons to Context Addon
- Added extra settings in General Category

Changelog v5.2.7 (2025-04-19):
- Animix will fail gracefully.
- Cleaned up settings.xml

Changelog v5.2.6 (2025-04-18):
- Put Watchlist in alphabetical order

Changelog v5.2.5 (2025-04-18):
- Fixed embed playback using IA
- Fixed incorrect titles in Source Select
- Changed default timeout to 20
- Updated Python Version Number

Changelog v5.2.4 (2025-04-17):
- Added hd-1 for testing

Changelog v5.2.3 (2025-04-16):
- Fixed Bugs with Best Match

Changelog v5.2.2 (2025-04-16):
- Fixed Bugs with last played source
- Fixed Bugs with UnCached Sources
- Modified Setup Wizard

Changelog v5.2.1 (2025-04-15):
- Small String bug

Changelog v5.2.0 (2025-04-15):
- Added a Setup Wizard Script
- Prepared the Migration Script
- Added Settings Script to AD and RD

Changelog v5.1.100 (2025-04-13):